MultiView Custom Collector Updated. Topological Visualization Code Updated. Added Script for OpenStack VM checking.

--- a/MultiView-Configurations/Custom_Collectors.properties
+++ b/MultiView-Configurations/Custom_Collectors.properties
@@ -2,7 +2,7 @@
 VISIBILITY_CENTER = 
 
 #Database Configurations e.g. MongoDB, Elasticsearch, InfluxDB
-MONGODB_HOST = 
+MONGODB_HOST = 0.0.0.0
 MONGODB_PORT = 27017
 MONGODB_DATABASE = smartxdb
 
@@ -24,4 +24,9 @@ SmartXBox_PASSWORD =
 #OVS_VM Configurations
 OVS_VM_USER = 
 OVS_VM_PASSWORD = 
+
+#OpenStack Mgmt Box Configurations
+MGMTBox_IP = 
+MGMTBox_USER = 
+MGMTBox_PASSWORD =
 
